--- a/css/main.css
+++ b/css/main.css
@@ -563,7 +563,7 @@ header > .menu .menu-item a:target {
   background-position: center;
 }
 .fullpage-container {
-  background-image: url('../img/background.jpg');
+  /*background-image: url('../img/background.jpg');*/
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top left;
