--- a/css/main.css
+++ b/css/main.css
@@ -407,9 +407,9 @@ body {
 #billetterie {
   z-index: 10;
   background: rgba(0,0,0,.2); /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 25%, rgba(0,0,0,.3) 40%, rgba(0,0,0,.66) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 25%, rgba(0,0,0,.3) 40%, rgba(0,0,0,.66) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 25%, rgba(0,0,0,.3) 40%, rgba(0,0,0,.66) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,.1) 15%, rgba(0,0,0,.4) 66%, rgba(0,0,0,.66) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,.1) 15%, rgba(0,0,0,.4) 66%, rgba(0,0,0,.66) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,.1) 15%, rgba(0,0,0,.4) 66%, rgba(0,0,0,.66) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   color: white;
   font-family: 'FuturaRegular', sans-serif;
   font-weight: normal;
