--- a/css/main.css
+++ b/css/main.css
@@ -114,9 +114,12 @@ body {
 #home .overlay {
   padding-bottom: 15vh;
 }
+#home .logo-gala,
+#home .overlay {
+  height: 90vh;
+}
 #home .logo-gala {
   width: inherit;
-  height: 90vh;
   background-image: url('../img/gala_logo.png');
   background-repeat: no-repeat;
   background-size: contain;
@@ -128,7 +131,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 90vh;
   background: rgba(0,0,0,.15); /* Old browsers */
   background: -moz-linear-gradient(top, rgba(27,0,135,0) 0%, rgba(0,0,0,.1) 85%, rgba(0,0,0,.95) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(27,0,135,0) 0%, rgba(0,0,0,.1) 85%, rgba(0,0,0,.95) 100%); /* Chrome10-25,Safari5.1-6 */
