Added wonderbox link + rules

--- a/css/main.css
+++ b/css/main.css
@@ -410,6 +410,7 @@ body {
  *
  ***************************************************************/
 #billetterie {
+  min-height: 90vh;
   z-index: 10;
   background: rgba(0,0,0,.2); /* Old browsers */
   background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,.1) 15%, rgba(0,0,0,.4) 66%, rgba(0,0,0,.66) 100%); /* FF3.6-15 */
@@ -421,7 +422,7 @@ body {
 }
 #billetterie .page-content {
   padding-top: 10vh;
-  padding-bottom: 15vh;
+  padding-bottom: 10vh;
 }
 
 
@@ -443,10 +444,16 @@ body {
   vertical-align: baseline;
   bottom: 0;
 }
-#billetterie .acheter-container {
-  margin-top: 5vh;
+#billetterie .acheter-container,
+#billetterie .wonderbox-container {
   width: 100%;
   text-align: center;
+}
+#billetterie .acheter-container {
+  margin-top: 5vh;
+}
+#billetterie .wonderbox-container {
+  margin-top: 8vh;
 }
 #billetterie .acheter-container .acheter {
   padding-bottom: 14px;
@@ -454,6 +461,14 @@ body {
   color: white;
   font-weight: bold;
   font-size: 2.2em;
+  text-decoration: none;
+}
+#billetterie .wonderbox-container .wonderbox {
+  padding-bottom: 8px;
+  border-bottom: 4px solid rgb(218,18,18);
+  color: white;
+  font-weight: bold;
+  font-size: 1.6em;
   text-decoration: none;
 }
 #billetterie a {
