Add link to Nicolas Dussouil website

--- a/css/main.css
+++ b/css/main.css
@@ -572,6 +572,9 @@ body {
   font-family: 'FuturaRegular', sans-serif;
   font-weight: normal;
 }
+#footer .copyright > a {
+  color: white;
+}
 
 
 
